🎨Add | set color value, add login interface
1. 카카오 로그인 Api 연동
2. 로그인 인터페이스 구현
3. 컬러 value 값 셋팅 : 노션에 설명 첨부사항 참고

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="kakao_app_key">47939324fbf96f947b79074c122ed360</string>
 </resources>
