--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">Noah</string>
-    <string name="title_home">Home</string>
+    <string name="title_community">커뮤니티</string>
+    <string name="title_what_to_do">조치 사항</string>
+    <string name="title_my_profile">내 정보</string>
+    <string name="title_write">글쓰기</string>
+    <string name="title_set_address">주소지 변경</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">알림</string>
     <string name="kakao_app_key">47939324fbf96f947b79074c122ed360</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
