--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_my_profile">내 정보</string>
     <string name="title_write">글쓰기</string>
     <string name="title_set_address">주소지 변경</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_map">지도</string>
     <string name="title_notifications">알림</string>
     <string name="kakao_app_key">47939324fbf96f947b79074c122ed360</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
